--- a/configuration/code-build/buildspec.yml
+++ b/configuration/code-build/buildspec.yml
@@ -10,14 +10,18 @@ phases:
       - echo Build started on `date`
       - echo Building the Docker image...          
       - docker build -t $IMAGE_REPO_NAME:$CODEBUILD_BUILD_NUMBER .
-      - docker tag $IMAGE_REPO_NAME:$CODEBUILD_BUILD_NUMBER $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$CODEBUILD_BUILD_NUMBER      
+      - docker tag $IMAGE_REPO_NAME:$CODEBUILD_BUILD_NUMBER $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$CODEBUILD_BUILD_NUMBER
+      - printf '{"ImageURI":"%s"}'  $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$CODEBUILD_BUILD_NUMBER > /imageDetail.json      
   post_build:
     commands:
       - echo Build completed on `date`
       - echo Pushing the Docker image...
       - echo SHA $CODEBUILD_BUILD_NUMBER
       - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$CODEBUILD_BUILD_NUMBER
-      - echo Register Task Definition - $IMAGE_REPO_NAME:$CODEBUILD_BUILD_NUMBER
-      - ls -la && pwd
-      - sed -i s/__IMAGE_TAG__/$CODEBUILD_BUILD_NUMBER/g configuration/ecs/ecs-task.json
-      - aws ecs register-task-definition --family $IMAGE_REPO_NAME-task --cli-input-json file://configuration/ecs/ecs-task.json
+      # - echo Register Task Definition - $IMAGE_REPO_NAME:$CODEBUILD_BUILD_NUMBER
+      # - ls -la && pwd
+      # - sed -i s/__IMAGE_TAG__/$CODEBUILD_BUILD_NUMBER/g configuration/ecs/ecs-task.json
+      # - aws ecs register-task-definition --family $IMAGE_REPO_NAME-task --cli-input-json file://configuration/ecs/ecs-task.json
+  artifacts:
+    files: /imageDetail.json
+    discard-paths: yes
